# immediate-mode-vulkan

./: .gitignore  CMakeLists.txt  main.cpp
demo/: flat_fragment.glsl  fragment.glsl  main.cpp  ui.cpp  ui.h  vertex.glsl  video_fragment.glsl  video_vertex.glsl
include/immediate_mode_vulkan/: draw.h  edit.h
include/immediate_mode_vulkan/resources/: ktx_resources.h  vulkan_memory_allocator_resource.h  vulkan_resources.h
resources/: vulkan_memory_allocator_resource.cpp  vulkan_memory_allocator_resource.h  vulkan_resources.h
source/: draw.cpp  edit.cpp  flat_fragment.glsl  flat_vertex.glsl  renderer.h  serialize.h
source/resources/: vulkan_memory_allocator_resource.cpp  vulkan_resources.cpp
ui/: draw.cpp  draw.h  ui.cpp  ui.h  video_fragment.glsl  video_vertex.glsl
